--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://johngrohman.github.io/reactpage",
+  "homepage": "https://johngrohman.github.io/Portfolio-Website/my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
