--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://johngrohman.dev",
+  "homepage": "https://johngrohman.dev/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
