--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "node_modules/.cache/gh-pages/https!github.com!johngrohman!Portfolio-Website.git"]
     path = "node_modules/.cache/gh-pages/https!github.com!johngrohman!Portfolio-Website.git"
-    url = "git@github.com:johngrohman/portfolio-website.git"
+    url = "https://github.com/johngrohman/portfolio-website.git"
