--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "globals": "^15.4.0",
     "nth-check": "^2.1.1",
     "react-scripts": "^5.0.1",
-    "typescript-eslint": "^7.13.0"
+    "typescript-eslint": "^7.13.0",
+    "postcss": "^8.4.38"
   },
   "overrides": {
     "nth-check": "^2.1.1"
