--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "devicons-react": "^1.3.0",
     "fix": "^0.0.3",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.1.0",
     "resolve-url-loader": "^5.0.0",
+    "sass": "^1.77.5",
     "svg": "^0.1.0",
     "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
@@ -27,7 +29,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint 'src/**'",
+    "lint": "eslint 'src/**/*.js' 'src/**/*.ts' 'src/**/*.tsx'",
     "test": "npm run lint",
     "eject": "react-scripts eject"
   },
@@ -56,9 +58,9 @@
     "gh-pages": "^6.1.1",
     "globals": "^15.4.0",
     "nth-check": "^2.1.1",
+    "postcss": "^8.4.38",
     "react-scripts": "^5.0.1",
-    "typescript-eslint": "^7.13.0",
-    "postcss": "^8.4.38"
+    "typescript-eslint": "^7.13.0"
   },
   "overrides": {
     "nth-check": "^2.1.1"
