--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "devicons-react": "^1.3.0",
     "fix": "^0.0.3",
     "postcss": "^8.4.38",
