updated styling, added dark mode

--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "fix": "^0.0.3",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.1.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.77.5",
+    "smoothscroll-polyfill": "^0.4.4",
     "svg": "^0.1.0",
     "typescript": "^3.2.1",
     "typewriter-effect": "^2.21.0",
@@ -60,6 +63,7 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/react-router-hash-link": "^2.4.9",
+    "@types/smoothscroll-polyfill": "^0.3.4",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "gh-pages": "^6.1.1",
