--- a/%PUBLIC_URL%/manifest.json
+++ b/%PUBLIC_URL%/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "Portfolio Website",
+    "name": "Portfolio Website",
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
